--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <meta property="og:image" content="/og-image" />
+    <meta property="og:image" content="/og-image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Felix Carapaica</title>
   </head>
